# cube-rooter

./: Cargo.toml
src/: gen_rands.rs  main.rs
